# JARVIS-V0.1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
llm/: gemini.py  prompts.py
memory/: short_term.py
skills/: memory_tools.py
skills/system/: SKILL.MD  run.py
tools/: system_tools.py
voice/: listener.py  speaker.py  wakeword.py
