[project]
name = "jarvis-v0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "numpy>=2.4.6",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.16.1",
]
