[project]
name = "jarvis-v0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.5.0",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "numpy>=2.4.6",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "speechrecognition>=3.16.1",
]
